syntax = "proto3";

option csharp_namespace = "ChatServer";

package chat;

message ChatMessage {
  string user = 1;
  string text = 2;
}

message MessageRequest {
  string user = 1;
  string text = 2;
}

message Empty {}

service ChatService {
  rpc SendMessage (MessageRequest) returns (Empty);
  rpc ReceiveMessages (Empty) returns (stream ChatMessage);
}
